--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,49 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+}
+
+/*Header*/
+.onlyHeader {
+  padding-left: 10px;
+  padding-block: 20px;
+  background-color: #F8F9FA;
+  font-size: x-large;
+}
+
+/*Main*/
+.container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.containerButtons {  
   text-align: center;
+  padding-block: 40px;
+}
+
+.containerDescription {
+  width: 70%;
+  padding-inline: 20px;
+  padding-block: 20px; 
+  border: 2px solid rgba(184, 184, 184, 0.5);
+  border-radius: 10px;
+  font-size: 25px; 
+  color: rgb(70, 70, 70);
+  line-height: 1.5;
+}
+
+.button {
+  border: none;
+  border-radius: 10px;
+  padding: 18px;
+  margin: 15px;
+  background-color: #0D6EFD;
+  color: white;
+  font-size: 25px; 
+  cursor: pointer;
 }
 
